TP_5_Copy/src/AnalizadorSemantico.output
Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: declaracion
    4     | asignacion
    5     | ENTERO

    6 asignacion: IDENTIFICADOR '=' valor ';'

    7 declaracion: TIPO_DATO tipoDeclaracion ';'

    8 tipoDeclaracion: IDENTIFICADOR asignacionOPC
    9                | IDENTIFICADOR asignacionOPC ',' tipoDeclaracion

   10 asignacionOPC: /* vacío */
   11              | '=' valor

   12 valor: ENTERO
   13      | REAL
   14      | CHAR
   15      | STRING


Terminales con las reglas donde aparecen

$end (0) 0
',' (44) 9
';' (59) 6 7
'=' (61) 6 11
error (256)
ENTERO (258) 5 12
REAL (259) 13
CHAR (260) 14
STRING (261) 15
TIPO_DATO (262) 7
IDENTIFICADOR (263) 6 8 9


No terminales con las reglas donde aparecen

$accept (12)
    en la izquierda: 0
input (13)
    en la izquierda: 1 2, en la derecha: 0 2
line (14)
    en la izquierda: 3 4 5, en la derecha: 2
asignacion (15)
    en la izquierda: 6, en la derecha: 4
declaracion (16)
    en la izquierda: 7, en la derecha: 3
tipoDeclaracion (17)
    en la izquierda: 8 9, en la derecha: 7 9
asignacionOPC (18)
    en la izquierda: 10 11, en la derecha: 8 9
valor (19)
    en la izquierda: 12 13 14 15, en la derecha: 6 11


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end           desplazar e ir al estado 2
    ENTERO         desplazar e ir al estado 3
    TIPO_DATO      desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5

    line         ir al estado 6
    asignacion   ir al estado 7
    declaracion  ir al estado 8


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    5 line: ENTERO .

    $default  reduce usando la regla 5 (line)


estado 4

    7 declaracion: TIPO_DATO . tipoDeclaracion ';'

    IDENTIFICADOR  desplazar e ir al estado 9

    tipoDeclaracion  ir al estado 10


estado 5

    6 asignacion: IDENTIFICADOR . '=' valor ';'

    '='  desplazar e ir al estado 11


estado 6

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 7

    4 line: asignacion .

    $default  reduce usando la regla 4 (line)


estado 8

    3 line: declaracion .

    $default  reduce usando la regla 3 (line)


estado 9

    8 tipoDeclaracion: IDENTIFICADOR . asignacionOPC
    9                | IDENTIFICADOR . asignacionOPC ',' tipoDeclaracion

    '='  desplazar e ir al estado 12

    $default  reduce usando la regla 10 (asignacionOPC)

    asignacionOPC  ir al estado 13


estado 10

    7 declaracion: TIPO_DATO tipoDeclaracion . ';'

    ';'  desplazar e ir al estado 14


estado 11

    6 asignacion: IDENTIFICADOR '=' . valor ';'

    ENTERO  desplazar e ir al estado 15
    REAL    desplazar e ir al estado 16
    CHAR    desplazar e ir al estado 17
    STRING  desplazar e ir al estado 18

    valor  ir al estado 19


estado 12

   11 asignacionOPC: '=' . valor

    ENTERO  desplazar e ir al estado 15
    REAL    desplazar e ir al estado 16
    CHAR    desplazar e ir al estado 17
    STRING  desplazar e ir al estado 18

    valor  ir al estado 20


estado 13

    8 tipoDeclaracion: IDENTIFICADOR asignacionOPC .
    9                | IDENTIFICADOR asignacionOPC . ',' tipoDeclaracion

    ','  desplazar e ir al estado 21

    $default  reduce usando la regla 8 (tipoDeclaracion)


estado 14

    7 declaracion: TIPO_DATO tipoDeclaracion ';' .

    $default  reduce usando la regla 7 (declaracion)


estado 15

   12 valor: ENTERO .

    $default  reduce usando la regla 12 (valor)


estado 16

   13 valor: REAL .

    $default  reduce usando la regla 13 (valor)


estado 17

   14 valor: CHAR .

    $default  reduce usando la regla 14 (valor)


estado 18

   15 valor: STRING .

    $default  reduce usando la regla 15 (valor)


estado 19

    6 asignacion: IDENTIFICADOR '=' valor . ';'

    ';'  desplazar e ir al estado 22


estado 20

   11 asignacionOPC: '=' valor .

    $default  reduce usando la regla 11 (asignacionOPC)


estado 21

    9 tipoDeclaracion: IDENTIFICADOR asignacionOPC ',' . tipoDeclaracion

    IDENTIFICADOR  desplazar e ir al estado 9

    tipoDeclaracion  ir al estado 23


estado 22

    6 asignacion: IDENTIFICADOR '=' valor ';' .

    $default  reduce usando la regla 6 (asignacion)


estado 23

    9 tipoDeclaracion: IDENTIFICADOR asignacionOPC ',' tipoDeclaracion .

    $default  reduce usando la regla 9 (tipoDeclaracion)
